--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Contacto</title>
-  <meta name="description" content="Simple Blog">
+  <meta name="description" content="Simplex Blog">
 
   <link rel="stylesheet" href="/css/main.css">
   <link rel="canonical" href="http://lalebot.github.io/blog/contacto.html">
