--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="description" content="Blog sobre informática">
 
   <link rel="stylesheet" href="/blog-informatica/css/main.css">
-  <link rel="canonical" href="http://lalebot.github.io//blog-informatica/">
-  <link rel="alternate" type="application/rss+xml" title="Info Blog" href="http://lalebot.github.io//blog-informatica/feed.xml" />
+  <link rel="canonical" href="http://lalebot.github.io/blog-informatica/blog-informatica/">
+  <link rel="alternate" type="application/rss+xml" title="Info Blog" href="http://lalebot.github.io/blog-informatica/blog-informatica/feed.xml" />
 </head>
 
 
